--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,8 @@
 		<form>
 			<input type="text" id="name" placeholder="Your name here" />
 			<button type="button" onclick="redirectToPage()">Submit</button>
+			<button type="button" onclick="join()">Join</button>
+
 		</form>
 
 		<h2>Connected Users:</h2>
@@ -18,32 +20,40 @@
 		<script>
 			const name = window.location.search.split('=')[1];
 
-			const socket = io('http://142.93.164.123:3000', {query: {
-			  username: name,
-			} });
+			const socket = io('142.93.164.123:3000/game', {
+				query: {
+					username: name,
+				},
+			});
 			const userList = document.getElementById('user-list');
 
 			function redirectToPage() {
-			  const name = document.getElementById('name').value;
-			  socket.emit('join', name);
-			  window.location.href = `http://142.93.164.123:3000/auth/game?name=${name}`;
+				const name = document.getElementById('name').value;
+				socket.emit('create', [name]);
+				window.location.href = `http://142.93.164.123:3000/auth/game?name=${name}`;
+			}
+
+			function join() {
+				const name = document.getElementById('name').value;
+				socket.emit('join', [name]);
+				//window.location.href = `http://142.93.164.123:3000/auth/game?name=${name}`;
 			}
 
 			socket.on('request', () => {
-			  const name = window.location.search.split('=')[1];
-        window.location.href = `http://142.93.164.123:3000/auth/game?name=${name}`;
+				const name = window.location.search.split('=')[1];
+				window.location.href = `http://142.93.164.123:3000/auth/game?name=${name}`;
 			});
 
 			socket.on('userList', (users) => {
-			  userList.innerHTML = '';
-			  users = users.usernames;
-        for (var i = 0; i < users.length; i++) {
-          const li = document.createElement('li');
-          li.innerText = users;
-          userList.appendChild(li);
-          console.log(li);
-        } 
-			 });
+				userList.innerHTML = '';
+				users = users.usernames;
+				for (var i = 0; i < users.length; i++) {
+					const li = document.createElement('li');
+					li.innerText = users;
+					userList.appendChild(li);
+					console.log(li);
+				}
+			});
 		</script>
 	</body>
 </html>
